# Excavator_Control

./: CMakeLists.txt  README.md  nrf52840dk_nrf52840.overlay  prj.conf
src/: PID.c  PID.h  adc.c  adc.h  main.c  motor.c  motor.h  sensor.c  sensor.h
